feat: implement controller logic
